# xrdpy

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  uploadpypi
.github/workflows/: PyPi-publish.yml
docs/: FAQs.md  REFERENCES.md  RELEASE.md  USAGE.md
tests/: 00_dev_test.ipynb  01_read_plot_xrd.ipynb  02_strain_relaxation_calculation.ipynb  03_peak_finding.ipynb  04_merge_xrds.ipynb  05_strain_cal_in_merge_xrds.ipynb  all.ipynb  read_plot_xrd.ipynb  strain_relaxation_calculation.ipynb  testing-v2.ipynb  testing.ipynb
tests/xrd_files/: NT3330_RSM_w2T-2T-105AlN-AlGaN.xrdml  NT3334C_RSM_w2T-2T-105AlN-AlGaN_fast.xrdml  test.xml
tutorials/: 00_dev_test.ipynb  01_read_plot_xrd.ipynb  02_strain_relaxation_calculation.ipynb  03_peak_finding.ipynb  04_merge_xrds.ipynb  05_strain_cal_in_merge_xrds.ipynb  xrd_tutorial.ipynb
tutorials/TBA/: 01_test_strain_relaxation_calculation.ipynb  02_test_strain_cal_in_merge_xrds.ipynb
tutorials/xrd_files/: NT3285_RSM_w-2T_105AlGaN_calibration_fine.xrdml  NT3615A_RSM_105_1.xrdml  NT3615A_RSM_105_2.xrdml  NT3615B_RSM_105_1.xrdml  NT3615B_RSM_105_2.xrdml  Samp3_RSM-w2T-2T_105.xrdml
xrdpy/: XRD.py  __init__.py
xrdpy/BasicFunctions/: __init__.py  _general_functions.py  _general_plot_functions.py  constants_.py  general_plot_functions.py
xrdpy/src/: __init_.py  __init__.py  _align_peaks.py  _alloy_params.py  _get_xrd.py  _peak_detection.py  _plot_xrd.py  _real_reciprocal_interconversion.py  constants_.py  get_xrd.py  plot_xrd.py
